--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>BoostMyRevenue</title>
     <script type="text/javascript">
-        window.location = "https://www.sharemyrevenue.net";
+        window.location = "https://www.boostmyrevenue.net";
     </script>
   </head>
 
